test/compilation_errors/parameter_declaration.clj
(ns compilation_errors.parameter_declaration)

(fn squareThis input*input)
